# compose_template

./: TODO  db.sqlite3  docker-compose.yml  makefile  pyproject.toml  requirements.txt
apps/: admin.py  models.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_customuser_image.py
nginx/: nginx.conf
root/: settings.py  urls.py
templates/apps/: index.html
